rnsc/test_data/rns_integration/error/parser/inner_directive/unexpected_token_in_body.rns
; Tests that unexpected token inside .inner body is detected and reported.
; Expected error: E-034 (unexpected token in inner class body)

.class public MyClass
.super java/lang/Object

.inner Inner
    .super java/lang/Object

     unknown_token

.inner_end

.class_end
